--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@bitbucket.ripe.net:7999/rnd/ui-datastores.git"
+    "url": "https://github.com/RIPE-NCC/rnd-ui-datastores.git"
   },
   "keywords": [
     "UI",
