--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "preversion": "git checkout release",
-    "postversion": "git push && git push --tags && npm --registry http://pulpo.ripe.net:4873 publish && git checkout master && git checkout release package.json",
-    "publish_public": "git pull github && git checkout release && npm --registry https://registry.npmjs.org/ publish && git checkout master"
+    "postversion": "git push --all && git push --tags && npm --registry http://pulpo.ripe.net:4873 publish && git checkout master && git checkout release package.json",
+    "publish_public": "git pull github release && git checkout release && npm --registry https://registry.npmjs.org/ --access public publish && git push --tags github && git checkout master"
   },
   "repository": {
     "type": "git",
